--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Berry - React Material Admin Dashboard Template</title>
-    <link rel="icon" href="/favicon.svg" />
+    <title>JobPal - Your Best Internship/Job Seeking Pal!</title>
+    <link rel="icon" href="/JobPal_icon.svg" />
     <!-- Meta Tags-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
