Update tab icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>JobPal - Your Job Seeking Pal</title>
-    <link rel="icon" href="/favicon.svg" />
+    <link rel="icon" href="/JobPal_icon.svg" />
     <!-- Meta Tags-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
